--- a/web/index.html
+++ b/web/index.html
@@ -1,108 +1,101 @@
-<!DOCTYPE html><html><head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <base href="$FLUTTER_BASE_HREF">
+    <meta charset="UTF-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>BizLingo</title>
+    <link rel="manifest" href="manifest.json">
+    <script src="coi-serviceworker.js"></script>
+    <style id="splash-screen-style">
+        html { height: 100% }
+        body {
+            margin: 0;
+            min-height: 100%;
+            background-color: #0B013D;
+            font-family: sans-serif;
+        }
+        .center {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        #status {
+            position: fixed;
+            bottom: 8px;
+            left: 12px;
+            color: white;
+            font-size: 14px;
+            font-family: monospace;
+            z-index: 9999;
+        }
+    </style>
+    <script type="module">
+        import * as webllm from "https://cdn.jsdelivr.net/npm/@mlc-ai/web-llm@0.2.80/lib/index.min.js";
+        window.WebLLM = webllm;
+    </script>
+    <script>
+        let engine = null;
+        let isReady = false;
 
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
+        window.removeSplashFromWeb = function() {
+            document.getElementById("splash")?.remove();
+            document.getElementById("splash-branding")?.remove();
+            document.body.style.background = "transparent";
+        };
 
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+        async function initWebLLM() {
+            try {
+                const webllm = window.WebLLM;
+                if (!webllm) return;
+                const initProgressCallback = (report) => {
+                    document.getElementById("status").textContent = report.text;
+                };
+                engine = await webllm.CreateMLCEngine(
+                    "Llama-3.2-1B-Instruct-q4f32_1-MLC",
+                    { initProgressCallback }
+                );
+                isReady = true;
+                document.getElementById("status").textContent = "✅ WebLLM ready";
+            } catch (e) {
+                console.error(e);
+                document.getElementById("status").textContent = "❌ WebLLM failed";
+            }
+        }
 
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="$FLUTTER_BASE_HREF">
+        window.addEventListener("load", () => {
+            setTimeout(initWebLLM, 500);
+        });
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+        window.is_webllm_ready = function() {
+            return isReady && engine !== null;
+        };
 
-  <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="bizlingo">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
-
-  <title>bizlingo</title>
-  <link rel="manifest" href="manifest.json">
-  <style id="splash-screen-style">
-    html {
-      height: 100%
-    }
-
-    body {
-      margin: 0;
-      min-height: 100%;
-      background-color: #001B3D;
-          background-size: 100% 100%;
-    }
-
-    .center {
-      margin: 0;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-    }
-
-    .contain {
-      display:block;
-      width:100%; height:100%;
-      object-fit: contain;
-    }
-
-    .stretch {
-      display:block;
-      width:100%; height:100%;
-    }
-
-    .cover {
-      display:block;
-      width:100%; height:100%;
-      object-fit: cover;
-    }
-
-    .bottom {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      -ms-transform: translate(-50%, 0);
-      transform: translate(-50%, 0);
-    }
-
-    .bottomLeft {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-    }
-
-    .bottomRight {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-    }
-  </style>
-  <script id="splash-screen-script">
-    function removeSplashFromWeb() {
-      document.getElementById("splash")?.remove();
-      document.getElementById("splash-branding")?.remove();
-      document.body.style.background = "transparent";
-    }
-  </script>
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+        window.webllm_chat = async function(userText, targetText) {
+            if (!engine) return "AI not ready";
+            const prompt = `Compare translations. User: "${userText}", Target: "${targetText}". Are they semantically equivalent? Answer YES or NO and explain.`;
+            try {
+                const output = await engine.chat.completions.create({
+                    messages: [{ role: "user", content: prompt }],
+                });
+                return output.choices[0].message.content;
+            } catch (e) {
+                console.error(e);
+                return "ERROR";
+            }
+        };
+    </script>
 </head>
-<body>
-  <picture id="splash">
-      <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x" media="(prefers-color-scheme: light)">
-      <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
-      <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
-  </picture>
-  <script src="flutter_bootstrap.js" async=""></script>
-
-
-</body></html>
+<body style="background-color: #0B013D;">
+<picture id="splash">
+    <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x" media="(prefers-color-scheme: light)">
+    <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
+    <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
+</picture>
+<div id="status">⏳ WebLLM loading...</div>
+<script src="flutter_bootstrap.js" async></script>
+</body>
+</html>
