--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,8 @@
     <base href="$FLUTTER_BASE_HREF">
     <meta charset="UTF-8">
     <title>BizLingo AI</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
     <script src="coi-serviceworker.js"></script>
     <style>
         body { background-color: #001B3D; margin: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; color: #ffffff; font-family: sans-serif; overflow: hidden; }
@@ -123,7 +125,7 @@
   </picture>
   
 <div id="custom-splash">
-    <img id="splash-img" src="assets/icon.png">
+    <img id="splash-img" src="icon.png">
     <div class="progress-bar"><div id="progress-fill"></div></div>
     <div id="status-text">Readying AI...</div>
 </div>
