revert: restore original splash screen and fix social preview metadata

--- a/web/index.html
+++ b/web/index.html
@@ -4,84 +4,66 @@
     <base href="$FLUTTER_BASE_HREF">
     <meta charset="UTF-8">
     <title>BizLingo AI</title>
-    <meta name="description" content="Master Business English and German with AI-powered feedback.">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+
     <meta property="og:title" content="BizLingo AI">
-    <meta property="og:description" content="Smart Business English & German learning app powered by On-Device AI.">
-    <meta property="og:url" content="https://vralchenko.github.io/BizLingo/">
+    <meta property="og:description" content="Smart Business English learning app.">
     <meta property="og:image" content="https://vralchenko.github.io/BizLingo/icons/Icon-512.png">
-    <meta property="og:type" content="website">
+
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="favicon.png">
     <link rel="manifest" href="manifest.json">
+
     <script src="coi-serviceworker.js"></script>
+
     <style>
         body { background-color: #001B3D; margin: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; color: #ffffff; font-family: sans-serif; overflow: hidden; }
         #custom-splash { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #001B3D; display: flex; z-index: 999999; flex-direction: column; align-items: center; justify-content: center; }
         #splash-img { width: 140px; height: 140px; margin-bottom: 20px; border-radius: 30px; }
         .progress-bar { width: 280px; height: 8px; background: rgba(255,255,255,0.1); border-radius: 4px; overflow: hidden; }
         #progress-fill { width: 0%; height: 100%; background: #4facfe; transition: width 0.3s; }
-        #status-text { font-size: 11px; margin-top: 10px; color: #00f2fe; text-align: center; max-width: 80%; }
+        #status-text { font-size: 11px; margin-top: 10px; color: #00f2fe; text-align: center; }
     </style>
+
     <script type="module">
         import * as webllm from "https://cdn.jsdelivr.net/npm/@mlc-ai/web-llm@0.2.80/lib/index.min.js";
         window.WebLLM = webllm;
     </script>
+
     <script>
         window.engine = null;
         window.isReady = false;
         window.is_webllm_ready = function() { return window.isReady; };
 
         window.webllm_validate = async function(userText, targetText) {
-            if (!window.engine) return "AI_OFF";
-            try {
-                const out = await window.engine.chat.completions.create({
-                    messages: [
-                        {
-                            role: "system",
-                            content: "You are a Business English coach. Accept any semantically correct, professional, and natural translation. Answer ONLY with 'YES' or 'NO', then start a new line with 'Reason:' and explain why briefly in Russian."
-                        },
-                        {role: "user", content: `Goal: "${targetText}" | User translation: "${userText}". Valid? YES/NO and Russian reason.`}
-                    ],
-                    temperature: 0.3
-                });
-                return out.choices[0].message.content;
-            } catch (e) { return "AI_OFF"; }
+            if (!window.engine) return "YES (No Engine)";
+            const out = await window.engine.chat.completions.create({
+                messages: [
+                    {
+                        role: "system",
+                        content: "You are a Business English coach. Accept any semantically correct, professional, and natural translation. Answer ONLY with 'YES' or 'NO', then start a new line with 'Reason:' and explain why briefly in Russian."
+                    },
+                    {role: "user", content: `Goal: "${targetText}" | User translation: "${userText}". Valid? YES/NO and Russian reason.`}
+                ],
+                temperature: 0.3
+            });
+            return out.choices[0].message.content;
         };
 
-        function hideSplash() {
-            const splash = document.getElementById('custom-splash');
-            if (splash) splash.remove();
-        }
-
         async function initWebLLM() {
-            const statusLabel = document.getElementById("status-text");
-
-            const timeoutId = setTimeout(() => {
-                if (!window.isReady) {
-                    hideSplash();
-                }
-            }, 15000);
-
-            if (!navigator.gpu) {
-                clearTimeout(timeoutId);
-                hideSplash();
-                return;
-            }
             try {
                 const initProgressCallback = (report) => {
-                    statusLabel.textContent = report.text;
+                    document.getElementById("status-text").textContent = report.text;
                     if (report.progress !== undefined) {
                         document.getElementById("progress-fill").style.width = (report.progress * 100) + "%";
                     }
                 };
                 window.engine = await window.WebLLM.CreateMLCEngine("Llama-3.2-1B-Instruct-q4f32_1-MLC", { initProgressCallback });
                 window.isReady = true;
-                clearTimeout(timeoutId);
-                hideSplash();
+                setTimeout(() => { document.getElementById('custom-splash').remove(); }, 1000);
             } catch (e) {
-                clearTimeout(timeoutId);
-                hideSplash();
+                document.getElementById("status-text").textContent = "Error: " + e;
+                // При ошибке всё равно убираем заставку через 3 секунды, чтобы войти в приложение
+                setTimeout(() => { document.getElementById('custom-splash').remove(); }, 3000);
             }
         }
         window.addEventListener("load", initWebLLM);
